[package]
name = "kafka_example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["tokio"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.204", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.120"
tokio-stream = "0.1.15"
axum = "0.7.5"



