[package]
name = "kafka_example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0"
tokio-stream = "0.1"
axum = "0.7"
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
config = "0.14"



